--- a/src/index.css
+++ b/src/index.css
@@ -12,13 +12,13 @@ code {
     monospace;
 }
 
-.buscaContainer {
+.loginContainer {
   display: grid; 
   justify-content: center;
   grid-gap: 10px;
 }
 
-.buscaContainer * {
+.loginContainer * {
   text-align: center;
   
 }
