--- a/src/pages/LoginPage.module.css
+++ b/src/pages/LoginPage.module.css
@@ -1,10 +1,14 @@
 .container {
+  width: 85%;
+  border-radius: 10px;
+  margin: auto;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-auto-rows: calc(100vh - 50px);
+  grid-auto-rows: 400px;
   grid-template-areas: 
     "image login";
     background-color: #fe9e86;
+  margin-top: 170px;
 }
 
 .imageContainer {
