--- a/src/components/PokemonCard.module.css
+++ b/src/components/PokemonCard.module.css
@@ -1,4 +1,54 @@
-.card {
-  text-align: center;
+.cardContainer {
+  display: flex;
+  border-radius: 13px;
   margin: 30px;
+  background-color: #e5e5e5;
+}
+
+.pokemonAvatar {
+  max-width: 96px;
+  background-color: #b6b6b6;
+  border-radius: 13px 0 0 13px;
+}
+
+.pokemonDescription {
+  display: flex;
+  width: 163px;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+}
+
+.pokemonName {
+  /* font-family: Roboto; */
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 25px;
+  margin: 16px;
+  text-transform: capitalize;
+}
+
+.Button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  width: 40px;
+  height: 40px;
+  background-color: #e5e5e5;
+  border-radius: 50%;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+
+  position: absolute;
+  left: 133px;
+  top: -9px;
+}
+
+.Button :hover {
+  cursor: pointer;
+}
+
+.unfavoriteButton {
+  color: #ff0000;
 }
