--- a/src/pages/Catalog.module.css
+++ b/src/pages/Catalog.module.css
@@ -1,6 +1,18 @@
 .container {
   display: flex;
   flex-direction: column;
+  align-items: center;
+}
+
+.navigation {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 10px 50px;
+}
+
+.catalogContainer {
+  display: flex;
   justify-content: center;
   align-items: center;
 }
@@ -8,11 +20,20 @@
 .catalog {
   display: flex;
   flex-wrap: wrap;
-  padding: 50px;
   align-items: center;
   justify-content: center;
+  box-sizing: border-box;
 }
 
-.buttons {
+.navigateButton {
   display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+  border-radius: 50%;
+  margin: 30px;
+}
+
+.navigateButton :hover {
+  cursor: pointer;
 }
