--- a/src/pages/UserProfilePage.module.css
+++ b/src/pages/UserProfilePage.module.css
@@ -12,3 +12,18 @@
   align-items: center;
   justify-content: center;
 }
+
+.emptyList {
+  margin-top: 60px;
+  color: #737373;
+  margin-bottom: 30px;
+}
+
+.catalogLink {
+  text-decoration: none;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 3px;
+  color: black;
+  background: #ffd500;
+}
