--- a/src/components/KindRenderer.module.css
+++ b/src/components/KindRenderer.module.css
@@ -2,8 +2,20 @@
   display: flex;
 }
 
+.kindElement {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
 .kindIcon {
   max-width: 24px;
   max-height: 24px;
   margin: 5px;
+}
+
+.bigKindIcon {
+  max-width: 74px;
+  max-height: 74px;
+  margin: 16px 32px;
 }
