Posiciona o titulo: Pokémons para o centro da tela

--- a/src/pages/Catalog.module.css
+++ b/src/pages/Catalog.module.css
@@ -25,6 +25,10 @@
   box-sizing: border-box;
 }
 
+.title {
+  margin-bottom: 32px;
+}
+
 .navigateButton {
   display: flex;
   align-items: center;
