--- a/src/components/PokemonCard.module.css
+++ b/src/components/PokemonCard.module.css
@@ -1,7 +1,7 @@
 .cardContainer {
   display: flex;
   border-radius: 13px;
-  margin: 30px;
+  margin: 20px 30px;
   background-color: #e5e5e5;
 }
 
