--- a/src/components/PokemonCard.module.css
+++ b/src/components/PokemonCard.module.css
@@ -131,6 +131,11 @@
   text-transform: capitalize;
 }
 
+.pokemonImage {
+  width: 96px;
+  height: 96px;
+}
+
 .Button {
   display: flex;
   align-items: center;
